test_suite5/ALAN/test_suite/alan-2022-examples/failing/007820_mutation.alan
source m8 begin while 0065 do not end end
